k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softwarewala-frontend
  namespace: default
  labels:
    app: softwarewala-frontend
spec:
  type: ClusterIP
  selector:
    app: softwarewala-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
